[gd_scene load_steps=14 format=3 uid="uid://c5rkwg5eys0i7"]

[ext_resource type="Script" path="res://scripts/in_lobby_menu.gd" id="1_1jabt"]
[ext_resource type="Texture2D" uid="uid://qhcwemdu5r50" path="res://assets/sprites/character_sprites/mine_bot_mothersheet_complete.png" id="2_hxxea"]
[ext_resource type="Texture2D" uid="uid://ns3yo3xcmqji" path="res://assets/sprites/mine_bot_idle_sheet_4.png" id="3_co20k"]
[ext_resource type="PackedScene" uid="uid://dm5hb3i7heepu" path="res://scenes/animated_bot.tscn" id="4_t6118"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1e8h8"]
bg_color = Color(0.905882, 0.117647, 0.137255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2vis2"]
bg_color = Color(0.905882, 0.117647, 0.137255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o8xuo"]
bg_color = Color(0.905882, 0.117647, 0.137255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50adl"]
bg_color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_54f62"]
atlas = ExtResource("2_hxxea")
region = Rect2(19, 0, 16, 18)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r4331"]
bg_color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_33c4x"]
atlas = ExtResource("3_co20k")
region = Rect2(0, 32, 16, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cix6r"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b3vu7"]
bg_color = Color(0, 0, 0, 1)

[node name="In Lobby Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1jabt")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.144063, 0.144063, 0.144063, 1)

[node name="Title" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -650.0
offset_right = 650.0
offset_bottom = 103.0
grow_horizontal = 2
color = Color(0, 0, 0, 1)

[node name="Return" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = 13.0
offset_right = -1027.0
offset_bottom = -616.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_1e8h8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2vis2")
theme_override_styles/normal = SubResource("StyleBoxFlat_o8xuo")
text = "return to menu"

[node name="Lobby Name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -650.0
offset_top = 141.0
offset_right = 650.0
offset_bottom = 244.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "lobby name"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Message_template" type="Label" parent="."]
visible = false
layout_mode = 0
offset_top = 294.0
offset_right = 224.0
offset_bottom = 339.0
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.478431, 0.647059, 0.996078, 1)
theme_override_font_sizes/font_size = 30
text = "Some message:"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 539.0
offset_top = 259.0
offset_right = 787.0
offset_bottom = 339.0

[node name="GameStatus" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "Waiting for host...."
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Start" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_1e8h8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2vis2")
theme_override_styles/normal = SubResource("StyleBoxFlat_o8xuo")
text = "start"

[node name="Spectate" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Spectate"

[node name="Host_template" type="HBoxContainer" parent="."]
layout_mode = 2
offset_top = 393.0
offset_right = 118.0
offset_bottom = 543.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Name" type="Label" parent="Host_template"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_50adl")
text = "Player 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="Host_template"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_54f62")
expand_mode = 1
stretch_mode = 5

[node name="AnimatedBot" parent="Host_template" instance=ExtResource("4_t6118")]
visible = false
position = Vector2(438, 138)

[node name="Player_template" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_top = 393.0
offset_right = 582.0
offset_bottom = 543.0
size_flags_vertical = 0

[node name="Name" type="Label" parent="Player_template"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_r4331")
text = "Empty Slot"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="Player_template"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_33c4x")
expand_mode = 1
stretch_mode = 5

[node name="AnimatedBot" parent="Player_template" instance=ExtResource("4_t6118")]
visible = false
position = Vector2(438, 138)

[node name="Player List" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 294.0
offset_right = -718.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="Players" type="VBoxContainer" parent="Player List"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.124069
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player List" type="Label" parent="Player List/Players"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_cix6r")
text = "player list"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Player List/Players"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Player List/Players/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Chat" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 582.0
offset_top = 344.0
grow_horizontal = 2
grow_vertical = 2

[node name="Chat Title" type="Label" parent="Chat"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_b3vu7")
text = "chat"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Chat"]
custom_minimum_size = Vector2(0, 252)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Chat/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Submit" type="Control" parent="Chat"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 10

[node name="Message" type="LineEdit" parent="Chat/Submit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "type in a message!"

[node name="Submit_msg" type="Button" parent="Chat/Submit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 574.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "SEND"

[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Spectate" to="." method="_on_spectate_pressed"]
[connection signal="text_submitted" from="Chat/Submit/Message" to="." method="_on_message_text_submitted"]
[connection signal="pressed" from="Chat/Submit/Submit_msg" to="." method="_on_submit_msg_pressed"]
